feat: add cdk project

--- a/project/tsconfig.json
+++ b/project/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "outDir": "../build",
+    "rootDir": "src",
     "baseUrl": "./src",
     "paths": {
       "~/*": ["./*"]
